# Human3D---Reconstruction

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REFACTOR_ANALYSIS.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements-gaussian.txt  requirements-lock.txt  requirements.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: pipeline.yaml
docs/: GAUSSIAN_SPLATTING.md
docs/api/: gaussian_trainer.html  gaussian_utils.html  index.html  losses.html  ply_exporter.html
notebooks/: 01_single_person_demo.ipynb  02_multi_person_demo.ipynb  03_depth_to_pointcloud.ipynb
scripts/: benchmark.py  generate_docs.py  run_pipeline.py  train_gaussians.py
src/human3d/: __init__.py  pipeline.py  run.bat
src/human3d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/human3d/configs/: __init__.py  gaussian_config.yaml
src/human3d/export/: __init__.py  ply_exporter.py
src/human3d/models/: __init__.py  depth_midas.py  pose_yolo.py  seg_sam.py
src/human3d/reconstruct/: __init__.py  gaussian_config.yaml  gaussian_trainer.py  gaussian_utils.py  losses.py  pointcloud.py
src/human3d/utils/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py  test_config.py  test_device.py  test_end_to_end.py  test_gsplat_minimal.py  test_initialization.py  test_losses.py  test_ply_exporter.py  test_ply_format.py  test_pointcloud.py  test_rendering.py  test_training.py
tests/fixtures/: camera_params.yaml  generate_fixtures.py  person_depth.npy  person_mask.npy
(+2 files in other folders)
