[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "human3d"
version = "0.1.0"
description = "Context-aware 3D reconstruction demo pipeline (MiDaS + YOLO Pose + SAM)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
